feat: v2.1.0 - 자동화 파이프라인, 회고 시스템 고도화, 메트릭 강화
- tsq retro auto: 원클릭 회고 사이클 (start→collect→report→apply→improve)
- tsq log compact: 로그 압축/아카이빙 (JSONL→월별 summary, MD→월별 archive)
- auto-metrics.sh: SessionEnd 자동 메트릭 수집 (토큰 비용 0)
- 품질 경고: Tool Failure Rate >10%, Cache Hit Rate <60% 자동 감지
- 자동 피드백: 도구 실패 3회+ 시 FB-XXXX.json 자동 생성
- .gitignore 자동 생성: tsq init 시 프로젝트 맞춤 설정
- README.md 대폭 업데이트: 회고/피드백 파이프라인 상세 문서
- CHANGELOG.md 신규 생성

--- a/templates/common/config.template.yaml
+++ b/templates/common/config.template.yaml
@@ -6,8 +6,9 @@
 # ============================================================
 project:
   name: my-project
-  type: web-service      # web-service | api-backend | platform | fintech | infra
+  type: web-service      # web-service | web-app | api-backend | platform | fintech | infra
   level: 2               # 1=MVP | 2=Standard | 3=Enterprise
+  architecture: traditional  # traditional | baas | microservices
   description: ""
 
 # ============================================================
