feat: add Context DI compiler + v3.4-D dogfooding sprint
Context DI (SSOT → Agent Spec Pipeline):
- `tsq compile` command: SSOT → compiled specs (deterministic extraction)
- controller skill: sub-agent delegation with spec dependency injection
- phase-guard hook: phase-based file write restrictions (PreToolUse)
- completion-guard hook: test execution verification (Stop)
- task-classification gate in CLAUDE.md for plain instructions
- `tsq upgrade` now deploys scripts/ directory

v3.4-D (Dogfooding Sprint):
- D1: mobile-app project type with Flutter/Dart presets
- D2 Phase 2: 5 Flutter sub-skills (networking, security, i18n, ci-cd, monitoring)
- D3: monorepo lite (workspaces config field)
- D4: `tsq skills` command (list/search/add/remove)

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@ docs/composition-layer-architecture.md
 docs/composition-layer/
 
 # 비공개: 내부 감사/분석/진척 보고서
+docs/context-di-architecture-review.md
+docs/context-di-harness-diagram.md
 docs/v3.3-completion-report.md
 docs/v3.1-prompt-optimization.md
 docs/v3-pipeline-audit.md
