feat: v3.4-Q execution quality sprint (Q1~Q7)
- Q1: security hardening (execSync→execFileSync, shell injection prevention)
- Q2: session-notes daemon integration (context-aware snapshots)
- Q3: quality guard rules (build-gate, completion-verification, plan-review)
- Q4: skill-suggest hook (auto-recommend skills per task context)
- Q5: stability-verification skill (6-layer verification pyramid + verify.sh)
- Q6: hook scripts hardened (fail-open on empty stdin, bash strict mode)
- Q7: security audit (OWASP Node.js patterns, .gitignore, credentials scan)

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,17 @@ dist/
 *.tmp
 *.temp
 
+# Security: Secrets & Credentials
+.env
+.env.*
+!.env.example
+*.pem
+*.key
+*.p12
+*.pfx
+credentials.json
+service-account*.json
+
 # ============================================================
 # 비공개: 비즈니스 전략 & 내부 분석
 # ============================================================
