--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "timsquad",
-  "version": "3.4.0",
+  "version": "3.5.0",
   "description": "AI Agent Development Process Framework - SSOT 기반 문서 체계, 최적화된 에이전트 롤, 회고적 학습",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "tsq": "./bin/tsq.js",
-    "timsquad": "./bin/tsq.js"
+    "tsq": "bin/tsq.js",
+    "timsquad": "bin/tsq.js"
   },
   "scripts": {
     "build": "tsc",
